The default configuration for TLS support is supposed to use Sun as, but we use GNU as.  So in this case it generates wrong relocations in non-PIC mode.

This change fixes lib/libc/tls/t_tls_dynamic test failure on 32-bit
sparc as described in PR toolchain/45985.

Approved by releng.